fixed the values being cut off

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,6 @@ RESPONMDER COLORS + SIZE
 }
 
 .fuckMyAss { 
-    height: 30%;
     width: 100%;
     position: absolute;
     bottom: 0;
